[package]
name = "signed-urls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "multipart"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] } 
mongodb = "2.8.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
